Add display:flex to .menu-container

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@
 }
 
 .menu-container {
+  display: flex;
+  justify-content: center;
   color: #fff;
   background-color: #5995da; /* Blue */
   padding: 20px 0;
