Changed photo-grid to flex-wrap, add 2 new grid-items
Added photo-grid-item 4 and 5.  Changed .css of photo-grid to
flexwrap: wrap.

--- a/styles.css
+++ b/styles.css
@@ -51,10 +51,11 @@
   width: 900px;
   display: flex;
   justify-content: flex-start;
+  flex-wrap: wrap;
 }
 
 .photo-grid-item {
   border: 1px solid #fff;
   width: 300px;
-  height: 300px;
+  height: 300px;  
 }
